--- a/reports/index.html
+++ b/reports/index.html
@@ -371,7 +371,7 @@ Session ID: 8ef878335dd9a9252440275a64ef981f
 	at org.openqa.selenium.By$ByXPath.findElement(By.java:353)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:315)
 	at pageObjects.MenPage.twoForTShort(MenPage.java:47)
-	at com.MenTshirtSale.dwaZaTShort(MenTshirtSale.java:41)
+	at com.BS0601MenTshirtSale.dwaZaTShort(MenTshirtSale.java:41)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -474,7 +474,7 @@ Session ID: 94eb5899727380e1e1c6df122c563cf6
 	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:300)
 	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:297)
 	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:249)
-	at com.CartAfterPageRefresh.itemInCartAfterRefresh(CartAfterPageRefresh.java:40)
+	at com.BS0401CartAfterPageRefresh.itemInCartAfterRefresh(CartAfterPageRefresh.java:40)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
